--- a/Data_train_project_2.ipynb
+++ b/Data_train_project_2.ipynb
@@ -8485,7 +8485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -8524,7 +8524,7 @@
     "    st.dataframe(test_df)\n",
     "    result = Model.predict(test_df)[0]\n",
     "    return result\n",
-    "Attachment file type: Desktop\n",
+    "Attachment file type: Desktop\\Traning EPS project 2\\flying_Deployment\n",
     "message.txt\n",
     "2.48 KB\n",
     "def main():\n",
@@ -8556,7 +8556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
